--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@transomjs/transom-openapi",
-  "version": "1.0.0",
+  "version": "1.0.1-0",
   "description": "Add OpenAPI and Swagger support to server-side Transom APIs",
   "main": "index.js",
   "scripts": {
